# ros_mobile_robot_project

mr_project/: CMakeLists.txt  package.xml
mr_project/bag/: bag1.bag
mr_project/config/: joint_controller.yaml  mrp.rviz
mr_project/launch/: 3d_lidar.launch  mr_project.launch  mrp_rviz.launch  robot_controller.launch  robot_model.launch
mr_project/src/: PCOp.hpp  PCOp_backup.hpp  mr_project_cpp.cpp  practice1.cpp
mr_project/urdf/: bonirob.xacro  bonirob_properties.xacro  bonirob_simple.gazebo
mr_project/urdf/model/: bonirob_simple.xacro  chassis.xacro  odom.xacro  steering_joints.xacro  wheel.xacro  wheel_joints.xacro  wheel_pad.xacro
mr_project/urdf/model/meshes/: br2.stl  wheel_pad.stl
mr_project/urdf/sensor/: 3d_lidar.xacro
mr_project/worlds/: ex.world  ex_plant1.world  ex_plant2.world  ex_plant3.world  ex_plant4.world
mr_project/worlds/ex_plant1/: model.config  model.sdf
